# DLSmaterialStocks

./: LICENSE.txt  README.md  pyproject.toml  requirements.txt
input/: ._.gitignore  ._MISO2.0_codes_correspondence.xlsx  ._country_correspondence.xlsx  ._ne_110m_admin_0_countries  .gitignore  MISO2.0_codes_correspondence.xlsx  country_correspondence.xlsx  cover_for_result_files.xlsx
input/2021_Kikstra/: DLE_current_opcon_elecnonelec_dimensions_default.csv  DLE_current_opcon_elecnonelec_dimensions_default_high.csv  DLE_current_opcon_elecnonelec_dimensions_default_low.csv  DLE_current_opcon_elecnonelec_dimensions_default_onlyELECTRICITY.csv  DLE_current_opcon_elecnonelec_dimensions_max_floorspace.csv  DLE_current_opcon_elecnonelec_dimensions_median_hh_size.csv  DLE_current_opcon_elecnonelec_dimensions_median_hh_size_high.csv  DLE_current_opcon_elecnonelec_dimensions_median_hh_size_low.csv  DLE_current_opcon_elecnonelec_dimensions_median_hh_size_onlyELECTRICITY.csv  DLE_current_opcon_elecnonelec_dimensions_min_floorspace.csv  DLE_threshold_input_opcon_elecnonelec_dimensions_default.csv  DLE_threshold_input_opcon_elecnonelec_dimensions_default_high.csv  DLE_threshold_input_opcon_elecnonelec_dimensions_default_low.csv  DLE_threshold_input_opcon_elecnonelec_dimensions_default_onlyELECTRICITY.csv  DLE_threshold_input_opcon_elecnonelec_dimensions_max_floorspace.csv  DLE_threshold_input_opcon_elecnonelec_dimensions_median_hh_size.csv  DLE_threshold_input_opcon_elecnonelec_dimensions_median_hh_size_high.csv  (+12 more)
scripts/: create_scenario_data.py  run_scenarios.py
src/: __init__.py
(+104 files in other folders)
