[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "dls-material-stocks"
version = "0.1.0"
description = "Analysis of material requirements for decent living standards globally"
readme = "README.md"
authors = [
    {name = "J. Streeck", email = "jstreeck@example.com"}
]
license = {file = "LICENSE.txt"}
classifiers = [
    "Intended Audience :: Science/Research",
    "License :: CC-BY 4.0",
    "Topic :: Scientific/Engineering",
    "Topic :: Scientific/Engineering :: Information Analysis"
]
requires-python = ">=3.8"
dependencies = [
    "numpy>=1.20.0",
    "pandas>=1.3.0",
    "scipy>=1.7.0",
    "matplotlib>=3.5.0",
    "plotly>=5.0.0",
    "geopandas>=0.10.0",
    "openpyxl>=3.0.0",
    "xlsxwriter>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=6.0.0",
    "black>=22.0.0",
    "flake8>=4.0.0",
    "mypy>=0.910",
    "pre-commit>=2.15.0",
]
docs = [
    "sphinx>=4.0.0",
    "sphinx-rtd-theme>=1.0.0",
]

[project.scripts]
dls-analyze = "dls_material_stocks.cli.main:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-dir]
"" = "src"
